<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:text="@string/saludo"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:textSize="50dp"
        android:textColor="@android:color/holo_orange_light" />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rg"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbSelect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/two_j"
                android:textSize="22dp"
                android:textColor="@android:color/holo_orange_light" />

            <EditText
                android:id="@+id/etJug1"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/namex"
                android:drawableLeft="@drawable/play2_x"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColorHint="@color/dim_foreground_disabled_material_dark" />

            <EditText
                android:id="@+id/etJug2"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/play1_o"
                android:hint="@string/nameo"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColorHint="@color/dim_foreground_disabled_material_dark" />

            <RadioButton
                android:id="@+id/rbSelect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/one_j"
                android:textSize="22dp"
                android:textColor="@android:color/holo_orange_light" />

            <EditText
                android:id="@+id/et1_jugador"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/play3"
                android:inputType="textPersonName"
                android:hint="@string/namex"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@color/dim_foreground_disabled_material_dark" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/salir"
            android:layout_weight="1"
            android:text="@string/salir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background = "@drawable/btnredondo"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/bJugar"
            android:layout_weight="1"
            android:text="@string/bJugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background = "@drawable/btnredondo"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>

</LinearLayout>