<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_blue_dark"
    android:gravity="center_horizontal"
    tools:context=".JugadorActivity">

    <ImageView
        android:id="@+id/image_list_jugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tv_label_nombre"
        android:layout_below="@id/image_list_jugador"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/label_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@android:color/holo_orange_light" />

    <TextView android:id="@+id/tv_nombre"
        android:layout_toRightOf="@id/tv_label_nombre"
        android:layout_alignBaseline="@id/tv_label_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView android:id="@+id/tv_label_ficha"
        android:layout_below="@id/tv_label_nombre"
        android:layout_marginTop="20dp"
        android:text="@string/label_ficha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@android:color/holo_orange_light" />

    <TextView android:id="@+id/tv_ficha"
        android:layout_toRightOf="@id/tv_label_ficha"
        android:layout_alignBaseline="@id/tv_label_ficha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView android:id="@+id/tv_label_total"
        android:layout_below="@id/tv_label_ficha"
        android:layout_marginTop="20dp"
        android:text="@string/label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@android:color/holo_orange_light" />

    <TextView android:id="@+id/tv_total"
        android:layout_toRightOf="@id/tv_label_total"
        android:layout_alignBaseline="@id/tv_label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView android:id="@+id/tv_label_ganadas"
        android:layout_below="@id/tv_label_total"
        android:layout_marginTop="20dp"
        android:text="@string/label_ganadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@android:color/holo_orange_light" />

    <TextView android:id="@+id/tv_ganadas"
        android:layout_toRightOf="@id/tv_label_ganadas"
        android:layout_alignBaseline="@id/tv_label_ganadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp" />

</RelativeLayout>
